--- a/home.html
+++ b/home.html
@@ -8,8 +8,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
         <!-- description -->
         <meta name="description" content="Landing page to fit with project mission.">
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
         <body>
             <h1> Octagon Project BoilerPlate </h1>
+            <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </body>
 </html>
