css for header and fonts + navbar

--- a/home.html
+++ b/home.html
@@ -10,9 +10,45 @@
         <meta name="description" content="Landing page to fit with project mission.">
         <!-- bootstrap -->
         <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <!-- style -->
+        <link rel="stylesheet" href="css/style.css" />
     </head>
         <body>
-            <h1> Octagon Project BoilerPlate </h1>
+            <header>
+             <nav class="navbar navbar-default bootsnav navbar-fixed-top header-light bg-transparent nav-box-width white-link">
+                <div class="container nav-header-container">
+                    <div class="row">
+                        <!-- start logo -->
+                        <div class="col-md-2 col-xs-5">
+                             <a href="home.html" title="logo" class="logo"><img src="images/logo.png" data-at2x="images/logo@2x.png" class="logo-dark" alt="Pofo"><img src="images/logo.png" data-at2x="images/logo-white@2x.png" alt="logo" class="logo-light default"></a>
+                        </div>
+                        <!-- end logo -->
+                        <div class="col-md-7 col-xs-2 width-auto pull-right accordion-menu">
+                            <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse" data-target="#navbar-collapse-toggle-1">
+                                <span class="sr-only">toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <div class="navbar-collapse collapse pull-right" id="navbar-collapse-toggle-1">
+                                <ul class="nav navbar-nav navbar-left panel-group no-margin alt-font font-weight-800">
+                                    <li><a href="#home" title="Home" class="inner-link">Home</a></li>
+                                    <li><a href="#section1" title="Section1" class="inner-link">Section 1</a></li>
+                                    <li><a href="#section2" title="Section2" class="inner-link">Section 2</a></li>
+                                    <li><a href="#contact" title="Contact" class="inner-link">Contact</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <!-- end navigation -->  
+        </header>
+        <!-- end header -->
+        <!-- start hero section -->
+        <section id="home">
+        </section>
+        <!-- end hero section -->
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </body>
 </html>
