--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 center-col margin-eight-bottom sm-margin-40px-bottom xs-margin-30px-bottom text-center last-paragraph-no-margin">
-                        <h5 class="alt-font font-weight-700 text-extra-dark-gray text-uppercase">tell us about your project</h5>
+                        <h5 class="alt-font font-weight-700 text-extra-dark-gray text-uppercase">Lorem Ipsum is simply dummy text of the printing </h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text.</p>
                     </div>  
                 </div>
@@ -184,7 +184,7 @@
                     <div class="row equalize xs-equalize-auto">
                         <div class="col-md-3 col-sm-6 col-xs-12 widget border-right border-color-medium-dark-gray sm-no-border-right sm-margin-30px-bottom xs-text-center">
                             <!-- start logo -->
-                            <a href="index.html" class="margin-20px-bottom display-inline-block"><img class="footer-logo" src="images/logo-white.png" data-at2x="images/logo-white@2x.png" alt=""></a>
+                            <a href="index.html" class="margin-20px-bottom display-inline-block"><img class="footer-logo" src="images/logo.png" data-at2x="images/logo.png" alt=""></a>
                             <!-- end logo -->
                             <p class="text-small width-95 xs-width-100">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <!-- start social media -->
@@ -202,32 +202,20 @@
                         <div class="col-md-3 col-sm-6 col-xs-12 widget border-right border-color-medium-dark-gray padding-45px-left sm-padding-15px-left sm-no-border-right sm-margin-30px-bottom xs-text-center">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-10px-bottom font-weight-600">Additional Links</div>
                             <ul class="list-unstyled">
-                                <li><a class="text-small" href="index.html">Home Classic Corporate</a></li>
-                                <li><a class="text-small" href="home-creative-business.html">Home Creative Business</a></li>
-                                <li><a class="text-small" href="home-creative-designer.html">Home Creative Designer</a></li>
-                                <li><a class="text-small" href="home-portfolio-minimal.html">Home Portfolio Minimal</a></li>
-                                <li><a class="text-small" href="home-portfolio-parallax.html">Home Portfolio  parallax</a></li>
-                                <li><a class="text-small" href="home-portfolio-personal.html">Home Portfolio Personal</a></li>
+                                <li><a class="text-small" href="home.html">Home Page</a></li>
+                                <li><a class="text-small" href="contact.html">Contact Page</a></li>
                             </ul>
                         </div>
                         <!-- end additional links -->
                         <!-- start contact information -->
                         <div class="col-md-3 col-sm-6 col-xs-12 widget border-right border-color-medium-dark-gray padding-45px-left sm-padding-15px-left sm-clear-both sm-no-border-right  xs-margin-30px-bottom xs-text-center">
                             <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-10px-bottom font-weight-600">Contact Info</div>
-                            <p class="text-small display-block margin-15px-bottom width-80 xs-center-col">POFO Design Agency<br> 301 The Greenhouse, Custard Factory, London, E2 8DY.</p>
+                            <p class="text-small display-block margin-15px-bottom width-80 xs-center-col">Merakicode <br> 301 The Greenhouse 91202.</p>
                             <div class="text-small">Email: <a href="mailto:sales@domain.com">sales@domain.com</a></div>
                             <div class="text-small">Phone: +44 (0) 123 456 7890</div>
-                            <a href="contact-us-modern.html" class="text-small text-uppercase text-decoration-underline">View Direction</a>
+                            <a href="https://www.google.com/maps?q=google+maps&um=1&ie=UTF-8&sa=X&ved=0ahUKEwiIqZyF9bnYAhVBON8KHYJzAMEQ_AUICigB" class="text-small text-uppercase text-decoration-underline">View Direction</a>
                         </div>
                         <!-- end contact information -->
-                        <!-- start instagram -->
-                        <div class="col-md-3 col-sm-6 col-xs-12 widget padding-45px-left sm-padding-15px-left xs-text-center">
-                            <div class="widget-title alt-font text-small text-medium-gray text-uppercase margin-20px-bottom font-weight-600">Instagram portfolio</div>
-                            <div class="instagram-follow-api">
-                                <ul id="instaFeed-footer"></ul>
-                            </div>
-                        </div>
-                        <!-- end instagram -->
                     </div>
                 </div>
             </div>
@@ -235,7 +223,7 @@
                 <div class="container">
                     <div class="row">
                         <!-- start copyright -->
-                        <div class="col-md-6 col-sm-6 col-xs-12 text-left text-small xs-text-center">&copy; 2017 POFO is Proudly Powered by <a href="http://www.themezaa.com" target="_blank" class="text-dark-gray">ThemeZaa</a></div>
+                        <div class="col-md-6 col-sm-6 col-xs-12 text-left text-small xs-text-center">&copy; 2018 Landing Page is Proudly Powered by <a href="http://www.meraki-code.com" target="_blank" class="text-dark-gray">Merakicode</a></div>
                         <div class="col-md-6 col-sm-6 col-xs-12 text-right text-small xs-text-center">
                             <a href="javascript:void(0);" class="text-dark-gray">Term and Condition</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="javascript:void(0);" class="text-dark-gray">Privacy Policy</a>
                         </div>
